--- a/app/src/main/res/layout/activity_sci1.xml
+++ b/app/src/main/res/layout/activity_sci1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="#44D8EC"
     tools:context=".sci1">
 
 
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Question 1"
         android:fontFamily="sans-serif-condensed"
-        android:textColor="@color/design_default_color_primary_variant"
+
         android:textStyle="bold"
         android:textSize="30sp"
 
@@ -34,6 +34,7 @@
         android:paddingStart="15dp"
         android:text="Which mixture of metal is used in the Gunmetal?"
         android:textSize="20sp"
+
         app:layout_constraintBottom_toTopOf="@+id/sci_rg1"
         app:layout_constraintEnd_toEndOf="parent"
 
