--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:text="iQuizz Welcomes you"
         android:textAlignment="center"
         android:textSize="30sp"
+        android:textColor="@color/white"
 
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
