--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -85,6 +85,7 @@
         android:text="Registration"
         android:textStyle="bold"
         android:textSize="30dp"
+        android:textColor="@color/white"
 
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
