--- a/app/src/main/res/layout/activity_sci3.xml
+++ b/app/src/main/res/layout/activity_sci3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="#44D8EC"
     tools:context=".sci3">
 
 
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:text="Question 3"
         android:fontFamily="sans-serif-condensed"
-        android:textColor="@color/design_default_color_primary_variant"
+
         android:textStyle="bold"
         android:textSize="30sp"
 
