--- a/app/src/main/res/layout/fragment_gk.xml
+++ b/app/src/main/res/layout/fragment_gk.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="#44D8EC"
     tools:context=".ui.gallery.gkFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:text="@string/welcome"
             android:paddingBottom="20dp"
             android:textAlignment="center"
-            android:textColor="@color/design_default_color_primary_variant"
+
             android:textSize="30sp"
             android:textStyle="bold"
 
@@ -51,6 +51,7 @@
             android:padding="10dp"
             android:textSize="18sp"
             android:textAlignment="center"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -66,6 +67,7 @@
             android:textSize="18sp"
             android:padding="10dp"
             android:textAlignment="center"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
